[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Datapacks/UI/InGameMenu/DatapackInGameEntry.gd" type="Script" id=1]

[node name="DatapackInGameEntry" type="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]
margin_right = 498.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Test datapack"
autowrap = true

[node name="ContainsLabel" type="Label" parent="."]
margin_left = 502.0
margin_right = 1000.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Contains a beatiful catwife"
autowrap = true

[node name="LoadButton" type="Button" parent="."]
margin_left = 1004.0
margin_right = 1046.0
margin_bottom = 20.0
text = "Load"

[node name="UpdateButton" type="Button" parent="."]
margin_left = 1050.0
margin_right = 1105.0
margin_bottom = 20.0
text = "Reload"

[node name="UnloadButton" type="Button" parent="."]
margin_left = 1109.0
margin_right = 1166.0
margin_bottom = 20.0
custom_colors/font_color_focus = Color( 1, 0.756863, 0.756863, 1 )
custom_colors/font_color = Color( 1, 0.576471, 0.576471, 1 )
custom_colors/font_color_hover = Color( 1, 0.666667, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 1, 0.34902, 0.34902, 1 )
text = "Unload"

[node name="NothingToLoadButton" type="Button" parent="."]
margin_left = 1170.0
margin_right = 1280.0
margin_bottom = 20.0
disabled = true
text = "Nothing to load"

[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="UpdateButton" to="." method="_on_UpdateButton_pressed"]
[connection signal="pressed" from="UnloadButton" to="." method="_on_UnloadButton_pressed"]
